// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BulletListItem component should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingBottom": 9,
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`the BulletListItem component should render a string 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingBottom": 9,
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        "God's work done in God's way will never lack God's supplies." – Hudson Taylor
      </Text>
    </View>
  </View>,
]
`;

exports[`the BulletListItem component should render render child components 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingBottom": 9,
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <Text
        bold={false}
        italic={false}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        •
      </Text>
    </View>
    <View
      style={
        Object {
          "flexShrink": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        "God's work done in God's way will never lack God's supplies." – Hudson Taylor
      </Text>
    </View>
  </View>,
]
`;
